--- a/_config.yml
+++ b/_config.yml
@@ -100,6 +100,7 @@ path:
       high: "/assets/gallery/photography/high"
       low: "/assets/gallery/photography/low"
     videos: "/assets/gallery/videos"
+  music: "/assets/music"
   videos: "/assets/videos"
   css: "/assets/css"
   js: "/assets/js"
