--- a/_data/blogroll.yml
+++ b/_data/blogroll.yml
@@ -1,3 +1,9 @@
+- title: "Señorita"
+  subtitle: "A Developer's Faux Pas"
+  desc: "The name is Chiu and this is my personal web site.<br />I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
+  url: "https://lasenhorita.github.io/"
+  emial: "senhorita@163.com"
+  image: "/assets/images/icons/HoldCat/HoldCat-Liquid.png"
 - title: "Elias's Cave"
   subtitle: "A Developer's Faux Pas"
   desc: "Project manager. DPO. CTO.<br />Software developer on PC, Linux, Android, iOS and OS X platform.<br />Crafty. Blogger. Traveller.<br />Big fan of Apple. Love of color.<br />Doggies are my fave."
