--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Señorita"
-alias: "Cat Complains"
+alias: "A Cat's Complaining"
 author: "Chiu"
 avatar: "/assets/images/avatar_round.png"
 description: "The name is Chiu and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
