--- a/_data/blogroll.yml
+++ b/_data/blogroll.yml
@@ -1,5 +1,5 @@
 - title: "Señorita"
-  subtitle: "A Developer's Faux Pas"
+  subtitle: "A Cat's Complaining"
   desc: "The name is Chiu and this is my personal web site.<br />I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
   url: "https://lasenhorita.github.io/"
   emial: "senhorita@163.com"
