--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: "The name is Chiu and this is my personal web site. I see myself as
 url: "https://lasenhorita.github.io"
 # url: '/Volumes/Shared/Common/Git/LaSenhorita/_site'
 email: "senhorita@163.com"
+github_url: "https://github.com/LaSenhorita/LaSenhorita.github.io/"
 timezone: Asia/Shanghai
 range:
   start: 2020
