--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,9 @@ range:
   end: 2020
 ui:
   theme: "light"
+  theme_reversed: "dark"
   # theme: "dark"
+  # theme_reversed: "light"
   # show_search: false
   show_search: true
   posts_list_style: 'group'
