--- a/_data/blogroll.yml
+++ b/_data/blogroll.yml
@@ -7,7 +7,7 @@
   github: "https://github.com/LaSenhorita/"
 - title: "Elias's Cave"
   subtitle: "A Developer's Faux Pas"
-  desc: "Project manager. DPO. CTO.<br />Software developer on PC, Linux, Android, iOS and OS X platform.<br />Crafty. Blogger. Traveller.<br />Big fan of Apple. Love of color.<br />Doggies are my fave."
+  desc: "Project manager. DPO. CTO.<br />Software developer on PC, Linux, Android, iOS and OS X platform.<br />Crafty. Blogger. Traveller.<br />Big fan of Apple. Love of color. Doggies are my fave."
   url: "https://meniny.cn/"
   emial: "admin@meiny.cn"
   image: "https://meniny.cn/assets/images/icons/Chair/Chair-M.png"
