--- a/_data/blogroll.yml
+++ b/_data/blogroll.yml
@@ -14,7 +14,7 @@
   github: "https://github.com/Meniny/"
 - title: "迷路の部落阁"
   subtitle: "等待也是约会的一部分嘛"
-  desc: "Hi, there👋<br />这里是 Lostfawn<br />一个可爱的蓝孩子~<br />然后呢？ 😃 少侠保重，江湖再会。 🤗"
+  desc: "Hi, there👋<br />这里是 Lostfawn<br />一个可爱的蓝孩子~  🤗"
   url: "https://www.lostfawn.cn/"
   emial: "1837007874@qq.com"
   image: "https://cdn.jsdelivr.net/gh/jack-bin183/cdn@1.7/img/custom/avatar.png"
