--- a/_data/SoulCardsTarot.yml
+++ b/_data/SoulCardsTarot.yml
@@ -68,7 +68,7 @@
         - title:        "The World"
           tags:         ["Accomplishment", "Acknowledgment", "Balance", "Completion", "Travel"]
           descriptions: ["This card represents the end of one cycle and the start of a new one. If you’ve been thinking of making a change, whether it be your job or moving, this card gives you the green light to do so! It also symbolizes travel and inspires the asker to go somewhere he hasn’t visited to experience more culture and history.", "Hard work will be rewarded and your life will be more balanced with new opportunities ahead."]
-- title:                "Minor Arcana - Suit of Cups"
+- title:                "Minor Arcana"
   groups:
     - title:            "Suit of Cups"
       cards:
