--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-name: "Señorita"
+name: "Picsew"
 alias: "A Cat's Complaining"
 author: "Chiu"
 avatar: "/assets/images/avatar_round.png"
 description: "The name is Chiu and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
-url: "https://lasenhorita.github.io"
+url: "https://picsew.cn"
 # url: '/Volumes/Shared/Common/Git/LaSenhorita/_site'
-email: "senhorita@163.com"
-github_url: "https://github.com/LaSenhorita/LaSenhorita.github.io/"
+email: "picsew@126.com"
+github_url: "https://github.com/PicsewArt/PicsewArt.github.io/"
 timezone: Asia/Shanghai
 range:
   start: 2020
