--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ ui:
   posts_list_style: 'group'
   # posts_list_style: 'simple'
   # posts_list_style: 'normal'
-favicon: 'icons-ghostcat'
+# favicon: 'icons-ghostcat'
 # favicon: 'icons-holdcat'
-# favicon: 'icons-sharp'
+favicon: 'icons-sharp'
 hero:
   url: 'HERO_SADNESS_H_0009.jpg'
   format: 'jpeg'
