--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -13,6 +13,7 @@ left:
 right:
   - title: "Engines"
     url: "/engines/index.html"
+    target: '_blank'
   - title: "Blogroll"
     url: "/blogroll/index.html"
   - title: 'About'
