--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 name: "Picsew"
 alias: "A Cat's Complaining"
 author: "Chiu"
-avatar: "/assets/images/avatar_round.png"
+avatar:
+  round: "/assets/images/avatar_round.png"
+  rect: "/assets/images/avatar_color.png"
 description: "The name is Chiu and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
 url: "https://picsew.cn"
 # url: '/Volumes/Shared/Common/Git/LaSenhorita/_site'
