foorer_list_size

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ ui:
 # favicon: 'icons-ghostcat'
 # favicon: 'icons-holdcat'
 favicon: 'icons-sharp'
+foorer_list_size: 5
 hero:
   url: 'HERO_SADNESS_H_0009.jpg'
   format: 'jpeg'
