--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ favicon: 'icons-pixel'
 # favicon: 'icons-sharp'
 foorer_list_size: 5
 hero:
-  url: 'HERO_SADNESS_H_0009.jpg'
+  url: 'HERO_0040.jpg'
   format: 'jpeg'
   author: "Chiu"
   name: 'Señorita'
