--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,9 @@ collections:
   creative:
     output: true
     sort_by: title
+  utils:
+    output: true
+    sort_by: title
   music:
     output: true
     sort_by: title
@@ -110,6 +113,12 @@ defaults:
     values:
       # layout: ""
       active_title: "Creative"
+  - scope:
+      path: ""
+      type: utils
+    values:
+      # layout: ""
+      active_title: "Utils"
   - scope:
       path: ""
       type: music
