--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,17 @@
 name: "Picsew"
-alias: "A Cat's Complaining"
-author: "Picsew"
+#alias: "A Cat's Complaining"
+alias: "A Developer's Faux Pas"
+author: "Elias"
+#description: "The name is Picsew and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
+description: "Illustration artist. DPO. CTO. PM. Software developer on PC, Linux, Android, iOS and OS X platform. Crafty. Blogger. Traveller. Big fan of Apple. Love of color. Doggies are my fave."
+url: "https://picsew.cn"
+# url: '/Volumes/Shared/Common/Git/Picsew/_site'
+email: "picsew@126.com"
+github_url: "https://github.com/PicsewArt/PicsewArt.github.io/"
+timezone: Asia/Shanghai
+range:
+  start: 2020
+  end: 2020
 avatar:
   prefer: "/assets/images/avatar/avatar_color.png"
   round:
@@ -14,15 +25,6 @@ avatar:
     full: "/assets/images/avatar/avatar_painting_full.jpg"
   sep:
     normal: "/assets/images/avatar/avatar_sep.png"
-description: "The name is Picsew and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
-url: "https://picsew.cn"
-# url: '/Volumes/Shared/Common/Git/Picsew/_site'
-email: "picsew@126.com"
-github_url: "https://github.com/PicsewArt/PicsewArt.github.io/"
-timezone: Asia/Shanghai
-range:
-  start: 2020
-  end: 2020
 ui:
   # theme: "light"
   # theme_reversed: "dark"
