--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: "Picsew"
 alias: "A Developer's Faux Pas"
 author: "Elias"
 #description: "The name is Picsew and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
-description: "Illustration artist. DPO. CTO. PM. Software developer on PC, Linux, Android, iOS and OS X platform. Crafty. Blogger. Traveller. Big fan of Apple. Love of color. Doggies are my fave."
+description: "Illustration artist.<br/>DPO. CTO. PM.<br/>Software developer on PC, Linux, Android, iOS and OS X platform.<br/>Crafty. Blogger. Traveller.<br/>Big fan of Apple. Love of color.<br/>Doggies are my fave."
 url: "https://picsew.cn"
 # url: '/Volumes/Shared/Common/Git/Picsew/_site'
 email: "picsew@126.com"
