--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: "Picsew"
 #alias: "A Cat's Complaining"
 alias: "A Developer's Faux Pas"
-author: "Elias"
-#description: "The name is Picsew and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
+author: "Ezra"
+#description: "The name is Ezra and this is my personal web site. I see myself as a relentless problem-solver, and I’m always looking for a new challenge."
 description: "Illustration artist.<br/>DPO. CTO. PM.<br/>Software developer on PC, Linux, Android, iOS and OS X platform.<br/>Crafty. Blogger. Traveller.<br/>Big fan of Apple. Love of color.<br/>Doggies are my fave."
 url: "https://picsew.cn"
 # url: '/Volumes/Shared/Common/Git/Picsew/_site'
