--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -17,8 +17,8 @@ right:
   # - title: "Engines"
   #   url: "/engines/index.html"
   #   target: '_blank'
-  - title: "Map"
-    url: "/map/index.html"
+#  - title: "Map"
+#    url: "/map/index.html"
 #  - title: "Blogroll"
 #    url: "/blogroll/index.html"
   - title: 'About'
